objects/AW_BankBranch__c.object
<CustomObject>
    <description>This object is used to capture different Branch related to different Banks in South Africa.</description>
    <fields>
        <fullName>AW_BankCode__c</fullName>
        <description>The Bank Code (15 Digit)</description>
        <label>Bank Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BankName__c</fullName>
        <description>This is used to store the name of the bank the branch belongs to</description>
        <label>Bank Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BranchCode__c</fullName>
        <description>The branch code of the bank (15 Digit)</description>
        <label>Branch Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bank Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AW_BranchCode__c</columns>
        <columns>AW_BankName__c</columns>
        <columns>AW_BankCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>